# gh-action-docs

./: .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/gh_action_docs/: app.py
tests/: test_main.py
